--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">TestNavigation</string>
 
     <string name="home" translatable="false">首页</string>
+    <string name="save" translatable="false">添加</string>
     <string name="find" translatable="false">发现</string>
     <string name="mine" translatable="false">我的</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
